School Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\School Project
-d
C:\School Project\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\School Project\RestaurantBill.java
<---- end of javadoc command ---->
Loading source file C:\School Project\RestaurantBill.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating C:\School Project\doc\RestaurantBill.html...
C:\School Project\storage.java:6: error: ']' expected
       String a[10]=["ABC"];
                ^
C:\School Project\storage.java:6: error: illegal start of expression
       String a[10]=["ABC"];
                  ^
C:\School Project\storage.java:6: error: illegal start of expression
       String a[10]=["ABC"];
                    ^
C:\School Project\storage.java:6: error: not a statement
       String a[10]=["ABC"];
                     ^
C:\School Project\storage.java:6: error: ';' expected
       String a[10]=["ABC"];
                          ^
C:\School Project\input.java:6: error: reached end of file while parsing
        BufferedReader r=new BufferedReader(new InputStreamReader(System.in));
                                                                              ^
Generating C:\School Project\doc\package-frame.html...
Generating C:\School Project\doc\package-summary.html...
Generating C:\School Project\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\School Project\doc\allclasses-frame.html...
Generating C:\School Project\doc\allclasses-noframe.html...
Generating C:\School Project\doc\index.html...
Generating C:\School Project\doc\stylesheet.css...
6 errors
